manifests/restapi/deployment-rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: restapi
    ingReq: needed
    #path: "/api/v1/books"
    port: "8080"
  name: restapi
  namespace: restapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restapi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: restapi
    spec:
      containers:
      - image: abhilashshetty04/library:0.1.1
        name: library
        resources: {}
status: {}
