manifests/restapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi
  namespace: restapi
spec:
  rules:
  - host: restapp.abhilash.com
    http:
      paths:
      - path: /api/v1/books
        pathType: Prefix
        backend:
          service:
            name: restapi
            port:
              number: 8080
